# automate-mailing

./: README.md  brief-template.docx  email-list.xlsx  pyproject.toml  test-mail.ipynb
