[tool.poetry]
name = "test-mail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
python-docx = "^1.1.0"
pypandoc = "^1.13"
fpdf = "^1.7.2"
ipykernel = "^6.29.3"
reportlab = "^4.1.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
